# Rekt-Protect

./: .env.example  .gitignore  DEMO_SCRIPT.md  DEMO_VIDEO_SCRIPT.md  DEPLOYMENT.md  README.md  TWITTER_ARTICLE.md  deploy-railway.sh  package-lock.json  package.json  railway.json  railway.toml  skill.md  tsconfig.json
dashboard/: .gitignore  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/docs/: page.tsx
dashboard/components/auth/: AuthScreen.tsx
dashboard/components/chat/: ChatInput.tsx  ChatMessage.tsx  ChatWindow.tsx  index.ts
dashboard/components/dashboard/: AgentCard.tsx  AgentGrid.tsx  CriticalAlerts.tsx  EventFeed.tsx  SentimentGauge.tsx  StatsRow.tsx  index.ts
dashboard/components/healer/: AgentHealthTable.tsx  AutonomousToggle.tsx  HealActionsTimeline.tsx  HealerStatus.tsx  IncidentLog.tsx  index.ts
dashboard/components/layout/: Header.tsx  Shell.tsx  Sidebar.tsx  index.ts
dashboard/components/network/: MEVPanel.tsx  NetworkStatsGrid.tsx  ProgramUpgrades.tsx  index.ts
dashboard/components/providers/: WalletContextProvider.tsx  index.ts
dashboard/components/scanner/: PermissionBadges.tsx  RiskGauge.tsx  index.ts  (+2 more)
dashboard/hooks/: index.ts
dashboard/lib/: api.ts  constants.ts  formatters.ts  types.ts
programs/threat-registry/: Cargo.toml
programs/threat-registry/src/: lib.rs
src/: index.ts
src/api/: server.ts
src/core/: agent-base.ts  event-bus.ts  swarm.ts  types.ts
src/utils/: ai-engine.ts  helius.ts  jupiter.ts  logger.ts  pyth.ts  solana.ts
(+40 files in other folders)
